clusters/cluster-1/utilities/bloodhound-ce/app-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: app-db
  name: app-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/kevin-default: "true"
        io.kompose.service: app-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DATABASE
              value: bloodhound
            - name: POSTGRES_PASSWORD
              value: bloodhoundcommunityedition
            - name: POSTGRES_USER
              value: bloodhound
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: docker.io/library/postgres:13.2
          livenessProbe:
            exec:
              command:
                - pg_isready -U bloodhound -d bloodhound -h 127.0.0.1 -p 5432
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: app-db
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
status: {}
