clusters/cluster-1/utilities/bloodhound-ce/app-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: app-db
  name: app-db
  namespace: default
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: app-db
status:
  loadBalancer: {}
