clusters/cluster-1/utilities/bloodhound-ce/bloodhound-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: bloodhound
  name: bloodhound
  namespace: default
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: bloodhound
status:
  loadBalancer: {}
