clusters/cluster-1/utilities/bloodhound-ce/graph-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: graph-db
  name: graph-db
  namespace: default
spec:
  ports:
    - name: "7687"
      port: 7687
      targetPort: 7687
    - name: "7474"
      port: 7474
      targetPort: 7474
  selector:
    io.kompose.service: graph-db
status:
  loadBalancer: {}
